# rlengine

./: CMakeLists.txt  Makefile  config.cfg  main.cpp
engine/: common.h  object.cpp  object.h  scene.cpp  scene.h  util.cpp  util.h
resources/models/: cube.mtl  default.mtl  monkey.mtl  path1.mtl  path2.mtl  path3.mtl  pathone.mtl  player.mtl
resources/shaders/: shaders_basic_lighting.c  shaders_deferred_render.c  shaders_fog.c  shaders_mesh_instancing.c
src/: main.cpp
